--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "vite": "^7.1.5"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.13",
+        "tailwindcss": "^4.1.13"
     }
 }
